# jupyterlab-conflict-editing

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  jupyter_config.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.binder/: environment.yml  postBuild
.github/workflows/: build.yml  check-release.yml
conflict_editing/: __init__.py  _version.py
notebook/: analyzer.ipynb  playground.ipynb  privatecell.ipynb
src/: cellAccessView.ts  cellActions.ts  cellDecoration.ts  executionInject.ts  forkButton.ts  icons.ts  index.ts  logger.ts  parallelGroupView.ts  sideWidget.tsx  utils.ts  viewSync.ts
src/pscripts/: codeAnalyzerScript.ts  forkCellScript.ts  multiCodeScript.ts  variableScript.ts
style/: base.css  index.css
